changed user profiles

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -15,11 +15,13 @@ This portfolio is built with **Next.js** and a library called [Nextra](https://n
 ---
 
 <div>
-  Twitter [@yourname](https://twitter.com/yourname)
+  Twitter [@yourname](https://twitter.com/komil_developer)
   <br />
-  GitHub [@yourname](https://github.com/yourname)
+  GitHub [@yourname](https://github.com/komildeveloper)
   <br />
-  Instagram [@yourname](https://instagram.com/yourname)
+  Instagram [@yourname](https://instagram.com/komil_developer)
   <br />
-  Email your@name.com
+  YouTube [@yourname](https://https://www.youtube.com/channel/UC4XCFTMdAcXpkmqcGiVNXTQ)
+  <br />
+  Email komildeveloper111@gmail.com
 </div>
