adding some more stuff

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -15,13 +15,13 @@ This portfolio is built with **Next.js** and a library called [Nextra](https://n
 ---
 
 <div>
-  Twitter [@yourname](https://twitter.com/komil_developer)
+  Twitter [@komil_developer](https://twitter.com/komil_developer)
   <br />
-  GitHub [@yourname](https://github.com/komildeveloper)
+  GitHub [@komildeveloper](https://github.com/komildeveloper)
   <br />
-  Instagram [@yourname](https://instagram.com/komil_developer)
+  Instagram [@komil_developer](https://instagram.com/komil_developer)
   <br />
-  YouTube [@yourname](https://https://www.youtube.com/channel/UC4XCFTMdAcXpkmqcGiVNXTQ)
+  YouTube [@Komil \Developer](https://https://www.youtube.com/channel/UC4XCFTMdAcXpkmqcGiVNXTQ)
   <br />
   Email komildeveloper111@gmail.com
 </div>
