--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,8 +6,7 @@ date: 2021-03-19
 
 # komildeveloper
 
-Hey, I'm a Senior Software Engineer at Company. I enjoy working with Next.js and crafting beautiful front-end experiences.
-
+Hey 👋, I'm a Self-Taught Developer. My dream is to be a Full-Stack Software Developer 
 ---
 
 <div>
@@ -17,7 +16,7 @@ Hey, I'm a Senior Software Engineer at Company. I enjoy working with Next.js and
   <br />
   Instagram [@komil_developer](https://instagram.com/komil_developer)
   <br />
-  YouTube [@Komil \Developer](https://https://www.youtube.com/channel/UC4XCFTMdAcXpkmqcGiVNXTQ)
+  YouTube [@Komil Developer](https://https://www.youtube.com/channel/UC4XCFTMdAcXpkmqcGiVNXTQ)
   <br />
   Email komildeveloper111@gmail.com
 </div>
