--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,9 +6,8 @@ date: 2021-03-19
 
 # komildeveloper
 
--
-Hey 👋, I'm a Self-Taught Developer. My dream is to be a Full-Stack Software Developer 
--
+Hey 👋, I'm a Self-Taught Developer. My dream is to be a Full-Stack Software Developer.
+
 ---
 
 <div>
