update index.mdx file

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -11,13 +11,14 @@ Hey 👋, I'm a Self-Taught Developer. My dream is to be a Full-Stack Software D
 ---
 
 <div>
-  Twitter [@komil_developer](https://twitter.com/komil_developer)
+  Twitter: [@komil_developer](https://twitter.com/komil_developer)
   <br />
-  GitHub [@komildeveloper](https://github.com/komildeveloper)
+  GitHub: [@komildeveloper](https://github.com/komildeveloper)
   <br />
-  Instagram [@komil_developer](https://instagram.com/komil_developer)
+  Instagram: [@komil_developer](https://instagram.com/komil_developer)
   <br />
-  YouTube [@Komil Developer](https://https://www.youtube.com/channel/UC4XCFTMdAcXpkmqcGiVNXTQ)
+  YouTube: [@Komil
+  Developer](https://https://www.youtube.com/channel/UC4XCFTMdAcXpkmqcGiVNXTQ)
   <br />
-  Email komildeveloper111@gmail.com
+  Email: komildeveloper111@gmail.com
 </div>
