--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -18,7 +18,7 @@ Hey 👋, I'm a Self-Taught Developer. My dream is to be a Full-Stack Software D
   Instagram: [@komil_developer](https://instagram.com/komil_developer)
   <br />
   YouTube: [@Komil
-  Developer](https://https://www.youtube.com/channel/UC4XCFTMdAcXpkmqcGiVNXTQ)
+  Developer](https://www.youtube.com/channel/UC4XCFTMdAcXpkmqcGiVNXTQ)
   <br />
   Email: komildeveloper111@gmail.com
 </div>
